# tripleo-patch-puppet-modules

./: .gitignore  .travis.yml  LICENSE.txt  Makefile.am  README.md  configure.ac
test/: Makefile.am  helper.sh  test-tripleo-patch-puppet-modules.bats.in
