#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([tripleo-patch-puppet-modules], [0.0.1], [chem@sathlan.org])
AM_INIT_AUTOMAKE

# Checks for programs.

# Output files
AC_CONFIG_FILES([Makefile
                 bin/Makefile
                 test/Makefile])

AC_OUTPUT([bin/tripleo-patch-puppet-modules test/test-tripleo-patch-puppet-modules.bats], [chmod +x bin/tripleo-patch-puppet-modules test/test-tripleo-patch-puppet-modules.bats])
